--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@yaireo/tagify": "^4.4.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.4.0",
     "react-google-maps": "^9.4.5",
