--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "tagify": "^0.1.1",
     "validatorjs": "^3.22.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
