--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@yaireo/tagify": "^4.4.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "naija-state-local-government": "^1.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-geocode": "^0.2.3",
