--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@yaireo/tagify": "^4.4.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "jquery": "^3.6.0",
     "naija-state-local-government": "^1.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -25,6 +26,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-summernote": "^2.0.2",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
