--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@yaireo/tagify": "^4.4.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "bs-stepper": "^1.7.0",
     "jquery": "^3.6.0",
     "naija-state-local-government": "^1.1.2",
     "react": "^17.0.2",
