--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dropzone": "^11.3.4",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.4.0",
+    "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
     "react-google-places-autocomplete": "^3.3.1",
     "react-hook-form": "^7.9.0",
