--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "bootstrap": "^5.0.2",
     "bootstrap-select": "^1.13.18",
     "bs-stepper": "^1.7.0",
+    "filepond": "^4.28.2",
+    "filepond-plugin-file-encode": "^2.1.10",
+    "filepond-plugin-file-validate-type": "^1.2.6",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.7",
     "jquery": "^3.6.0",
     "naija-state-local-government": "^1.1.2",
     "react": "^17.0.2",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^1.6.1",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-dom-factories": "^1.0.0",
     "react-dropzone": "^11.3.4",
+    "react-filepond": "^7.1.1",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.4.0",
     "react-google-login": "^5.2.2",
@@ -31,9 +40,11 @@
     "react-scripts": "4.0.3",
     "react-summernote": "^2.0.2",
     "react-toastify": "^7.0.4",
+    "react-transition-group": "^1.1.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "rsuite": "^4.10.2",
     "validatorjs": "^3.22.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
