Added Map Interaction to create listing interface

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "filepond-plugin-file-validate-type": "^1.2.6",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.7",
+    "google-map-react": "^2.1.10",
     "jquery": "^3.6.0",
     "naija-state-local-government": "^1.1.2",
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-typeahead": "^5.2.0",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-dom-factories": "^1.0.0",
@@ -35,6 +37,7 @@
     "react-google-maps": "^9.4.5",
     "react-google-places-autocomplete": "^3.3.1",
     "react-hook-form": "^7.9.0",
+    "react-load-script": "0.0.6",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -45,6 +48,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.10.2",
+    "use-places-autocomplete": "^1.9.4",
     "validatorjs": "^3.22.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
