--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-summernote": "^2.0.2",
     "react-toastify": "^7.0.4",
     "react-transition-group": "^1.1.2",
@@ -48,6 +49,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.10.2",
+    "slick-carousel": "^1.8.1",
     "use-places-autocomplete": "^1.9.4",
     "validatorjs": "^3.22.1",
     "web-vitals": "^1.1.2",
