--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "google-map-react": "^2.1.10",
     "jquery": "^3.6.0",
     "naija-state-local-government": "^1.1.2",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.6.0",
