--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-google-places-autocomplete": "^3.3.1",
     "react-hook-form": "^7.9.0",
     "react-load-script": "0.0.6",
+    "react-paginate": "^7.1.3",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -50,8 +52,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.10.2",
-    "tagify": "^0.1.1",
     "slick-carousel": "^1.8.1",
+    "tagify": "^0.1.1",
     "use-places-autocomplete": "^1.9.4",
     "validatorjs": "^3.22.1",
     "web-vitals": "^1.1.2",
