--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.7",
     "google-map-react": "^2.1.10",
+    "google-one-tap": "^1.0.1",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "naija-state-local-government": "^1.1.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -31,11 +33,13 @@
     "react-dom": "^17.0.2",
     "react-dom-factories": "^1.0.0",
     "react-dropzone": "^11.3.4",
+    "react-facebook-login": "^4.1.1",
     "react-filepond": "^7.1.1",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.4.0",
     "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
+    "react-google-one-tap-login": "0.0.9",
     "react-google-places-autocomplete": "^3.3.1",
     "react-hook-form": "^7.9.0",
     "react-load-script": "0.0.6",
