--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-spring": "^9.2.4",
     "react-summernote": "^2.0.2",
     "react-toastify": "^7.0.4",
     "react-transition-group": "^1.1.2",
