--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+REACT_APP_APP_NAME=Bayof
+REACT_APP_APP_URL=localhost:3000
+REACT_APP_APP_ENV=staging
+
+REACT_APP_API_URL=http://localhost:8000/api
+
 NODE_PATH=src/
+NODE_ENV=development
+
