--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-select": "^1.13.18",
     "bs-stepper": "^1.7.0",
     "env-cmd": "^10.1.0",
+    "express": "^4.17.1",
     "filepond": "^4.28.2",
     "filepond-plugin-file-encode": "^2.1.10",
     "filepond-plugin-file-validate-type": "^1.2.6",
@@ -43,12 +44,14 @@
     "react-google-maps": "^9.4.5",
     "react-google-one-tap-login": "0.0.9",
     "react-google-places-autocomplete": "^3.3.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.9.0",
     "react-load-script": "0.0.6",
     "react-paginate": "^7.1.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-spring": "^9.2.4",
