--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/register": "^7.15.3",
     "@hookform/resolvers": "^2.6.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -22,6 +25,7 @@
     "filepond-plugin-image-preview": "^4.6.7",
     "google-map-react": "^2.1.10",
     "google-one-tap": "^1.0.1",
+    "ignore-styles": "^5.0.1",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "naija-state-local-government": "^1.1.2",
@@ -73,7 +77,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ssr": "node server/index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -92,5 +97,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.8.0"
   }
 }
