--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.15.3",
     "@hookform/resolvers": "^2.6.0",
+    "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -50,6 +51,7 @@
     "react-google-places-autocomplete": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.9.0",
+    "react-hot-toast": "^2.1.1",
     "react-load-script": "0.0.6",
     "react-paginate": "^7.1.3",
     "react-player": "^2.9.0",
