Changed User State handler to Redux Persist

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-select": "^1.13.18",
     "bs-stepper": "^1.7.0",
+    "connected-react-router": "^6.9.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "filepond": "^4.28.2",
@@ -29,6 +30,7 @@
     "ignore-styles": "^5.0.1",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "localforage": "^1.10.0",
     "naija-state-local-government": "^1.1.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -59,6 +61,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-spring": "^9.2.4",
     "react-summernote": "^2.0.2",
@@ -66,6 +69,8 @@
     "react-transition-group": "^1.1.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-reset": "^0.3.0",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.10.2",
     "slick-carousel": "^1.8.1",
