--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bootstrap-select": "^1.13.18",
     "bs-stepper": "^1.7.0",
     "connected-react-router": "^6.9.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "filepond": "^4.28.2",
@@ -42,6 +44,7 @@
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-dom-factories": "^1.0.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^11.3.4",
     "react-facebook-login": "^4.1.1",
     "react-filepond": "^7.1.1",
@@ -74,6 +77,7 @@
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.10.2",
     "simple-react-lightbox": "^3.6.9-0",
+    "slate-react": "^0.66.2",
     "slick-carousel": "^1.8.1",
     "tagify": "^0.1.1",
     "use-places-autocomplete": "^1.9.4",
