--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "filepond-plugin-image-preview": "^4.6.7",
     "google-map-react": "^2.1.10",
     "google-one-tap": "^1.0.1",
+    "html-to-draftjs": "^1.5.0",
     "ignore-styles": "^5.0.1",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
