--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-typeahead": "^5.2.0",
     "react-content-loader": "^6.0.3",
