Required config files

--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ REACT_APP_APP_NAME=Bayof
 REACT_APP_APP_URL=https://test.bayof.co
 REACT_APP_APP_ENV=staging
 
-REACT_APP_API_URL=https://repositories/api
+REACT_APP_API_URL=https://test-server.bayof.co/api
 
 REACT_APP_GOOGLE_API_KEY=AIzaSyBBYmJujloM3zNdxMpokW1G_Qo5Qo_05_A
 REACT_APP_FACEBOOK_APP_ID=1003408093533632
