--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homly",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://test.bayof.co",
+  "homepage": "https://test.bayof.co",
   "dependencies": {
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
@@ -60,6 +60,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.9.0",
     "react-hot-toast": "^2.1.1",
+    "react-js-pagination": "^3.0.3",
     "react-load-script": "0.0.6",
     "react-paginate": "^7.1.3",
     "react-player": "^2.9.0",
